src/objects/Equipment__c.object
<CustomObject>
    <fields>
        <fullName>X2017__c</fullName>
        <label>2017年手术量汇总（ORK）</label>
        <summarizedField>CustomObject1__c.ORK_number__c</summarizedField>
        <summaryFilterItems>
            <field>CustomObject1__c.Name</field>
            <operation>contains</operation>
            <value>2017</value>
        </summaryFilterItems>
        <summaryForeignKey>CustomObject1__c.shebei__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X2018_TPRK__c</fullName>
        <label>2018年手术量汇总（TPRK）</label>
        <summarizedField>CustomObject1__c.TPRK__c</summarizedField>
        <summaryFilterItems>
            <field>CustomObject1__c.Name</field>
            <operation>contains</operation>
            <value>2018</value>
        </summaryFilterItems>
        <summaryForeignKey>CustomObject1__c.shebei__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>YearsSince__c</fullName>
        <label>飞白年手术量（眼）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appointprice__c</fullName>
        <label>设备约定保修价格</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>areanew__c</fullName>
        <formula>TEXT(customer__r.area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>区域</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>业务机会</label>
        <referenceTo>chance__c</referenceTo>
        <relationshipLabel>设备</relationshipLabel>
        <relationshipName>equVRbz</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chiller_water_flow__c</fullName>
        <label>chiller water flow</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>设备</relationshipLabel>
        <relationshipName>obSe</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>firstpressure__c</fullName>
        <label>初级气压(Bar)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fmsb2__c</fullName>
        <formula>YEAR( TODAY() ) - YEAR(PurchaseTime2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>飞秒设备已使用时间(年)2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fmsb__c</fullName>
        <formula>YEAR( TODAY() ) - YEAR(PurchaseTime1__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>飞秒设备已使用时间(年)1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hfmj__c</fullName>
        <label>能量测试HF（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hfnm__c</fullName>
        <label>能量测试HF（nm）</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>housing_temperature__c</fullName>
        <label>housing temperature</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>humidity_DP__c</fullName>
        <label>humidity DP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hvv__c</fullName>
        <label>能量测试HV（V）</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>installationdate__c</fullName>
        <label>安装日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>irx3__c</fullName>
        <label>irx3全眼序列号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isSPT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否有SPT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ismain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否主设备</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isocp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否有OCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ispresbytism__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否有老视</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isvideo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否有摄录像</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>keratron_VK__c</fullName>
        <label>keratron-VK序列号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>keratron__c</fullName>
        <label>keratron序列号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>keratron_bridge__c</fullName>
        <label>keratron-bridge序列号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lasercavitynumber__c</fullName>
        <label>激光腔脉冲数（M）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lasercavitytype__c</fullName>
        <label>激光腔厂家</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lasernum__c</fullName>
        <label>激光腔脉冲数（M）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lfmj__c</fullName>
        <label>能量测试LF（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lfnm__c</fullName>
        <label>能量测试LF（nm）</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>machineage__c</fullName>
        <label>机龄</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mainEquipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>若为附属设备，则主设备是</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>设备</relationshipLabel>
        <relationshipName>SvRn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>newwarrantyEnd__c</fullName>
        <label>设备最新保修终止日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nianjunshoushuliang__c</fullName>
        <formula>zongshoushuliang__c  /  machineage__c</formula>
        <label>年均手术量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nlvsmj__c</fullName>
        <label>最大能量950v10s下（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>otherpressure__c</fullName>
        <label>次级气压(mBar)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>产品</label>
        <referenceTo>product__c</referenceTo>
        <relationshipLabel>设备</relationshipLabel>
        <relationshipName>H1io</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>remark__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sbxz__c</fullName>
        <description>用于识别客户所属设备的性质</description>
        <label>设备性质</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>合同机</fullName>
                    <default>true</default>
                    <label>合同机</label>
                </value>
                <value>
                    <fullName>样机</fullName>
                </value>
                <value>
                    <fullName>OPTOS原厂租赁，明望提供技术服务</fullName>
                </value>
                <value>
                    <fullName>明望租赁</fullName>
                </value>
                <value>
                    <fullName>客户退回</fullName>
                </value>
                <value>
                    <fullName>样机转销售</fullName>
                </value>
                <value>
                    <fullName>注册样机</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>shengfen__c</fullName>
        <formula>TEXT(customer__r.province__c)</formula>
        <label>客户: 省/直辖市</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shoushuliangnum__c</fullName>
        <label>手术量记录数</label>
        <summaryForeignKey>CustomObject1__c.shebei__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sirius__c</fullName>
        <label>SIRIUS序列号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>temperature_DP__c</fullName>
        <label>temperature DP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>virsionnumber__c</fullName>
        <label>版本号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>warrantyEnd__c</fullName>
        <label>设备保修终止日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>warrantySatart__c</fullName>
        <inlineHelpText>第一次装机后，根据验收时间自动默认保修开始日期</inlineHelpText>
        <label>设备保修开始日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>warrantyperiod__c</fullName>
        <label>设备保修期（月）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>warrantytype__c</fullName>
        <label>保修类型</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>设备合同-保修</fullName>
                    <default>true</default>
                    <label>设备合同-保修</label>
                </value>
                <value>
                    <fullName>售后合同-全保</fullName>
                </value>
                <value>
                    <fullName>售后合同-技术保</fullName>
                </value>
                <value>
                    <fullName>售后合同-单次服务</fullName>
                </value>
                <value>
                    <fullName>样机试用</fullName>
                </value>
                <value>
                    <fullName>保外</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
                <value>
                    <fullName>售后合同-半保</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>we__c</fullName>
        <label>微粒抽吸系统类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Internal PES</fullName>
                </value>
                <value>
                    <fullName>External PES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>workstation__c</fullName>
        <label>workstation序列号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yCRMbm__c</fullName>
        <label>原CRM资产编码</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yCRMcpbh__c</fullName>
        <label>原CRM产品编号</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yCRMcpcs__c</fullName>
        <label>原CRM产品厂商</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yCRMcpmc__c</fullName>
        <label>原CRM产品名称</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yCRMcpxh__c</fullName>
        <label>原CRM产品型号</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yanshou_date__c</fullName>
        <formula>warrantySatart__c</formula>
        <label>验收日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>yanshouzhouqi__c</fullName>
        <formula>yanshou_date__c  -  installationdate__c</formula>
        <label>验收周期（天）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zdnlvsmj__c</fullName>
        <label>最大能量1000V/1400v10s下（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zongjianchaliang__c</fullName>
        <label>总检查量</label>
        <summarizedField>CustomObject5__c.Field1__c</summarizedField>
        <summaryForeignKey>CustomObject5__c.equipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zongshoushuliang__c</fullName>
        <label>总手术量</label>
        <summarizedField>CustomObject1__c.ORK_number__c</summarizedField>
        <summaryForeignKey>CustomObject1__c.shebei__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>设备</label>
    <listViews>
        <fullName>View26</fullName>
        <columns>customer__c</columns>
        <columns>NAME</columns>
        <columns>BXtx__c</columns>
        <columns>Field5__c</columns>
        <columns>warrantytype__c</columns>
        <columns>AppliedSituation__c</columns>
        <columns>Equipmentname__c</columns>
        <columns>Equipmentunittype__c</columns>
        <columns>installationdate__c</columns>
        <columns>CustomerName__c</columns>
        <columns>shengfen__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BXtx__c</field>
            <operation>equals</operation>
            <value>需要提醒</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>adm</value>
        </filters>
        <label>预警提醒</label>
        <language>zh_CN</language>
    </listViews>
    <listViews>
        <fullName>View27</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>MaterialCoding__c</columns>
        <columns>customer__c</columns>
        <columns>warrantySatart__c</columns>
        <columns>warrantyEnd__c</columns>
        <columns>SalesChannels__c</columns>
        <columns>EquipmentInstaller__c</columns>
        <columns>EquipmentOperator__c</columns>
        <columns>Telephone__c</columns>
        <columns>Salesman__c</columns>
        <columns>yCRMbm__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>admin</value>
        </filters>
        <label>常规设备资产</label>
        <language>zh_CN</language>
    </listViews>
    <nameField>
        <label>设备序列号</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>设备</pluralLabel>
    <recordTypes>
        <fullName>Cgkhzc</fullName>
        <active>true</active>
        <label>常规设备资产</label>
    </recordTypes>
    <recordTypes>
        <fullName>LensAr</fullName>
        <active>true</active>
        <description>用于记录飞白设备信息</description>
        <label>飞白设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>Luneau</fullName>
        <active>true</active>
        <label>自动检眼仪设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>OuBao</fullName>
        <active>true</active>
        <description>用于记录欧堡设备信息</description>
        <label>欧堡设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType</fullName>
        <active>true</active>
        <description>用于记录角膜/全眼设备</description>
        <label>准分子检查设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType1</fullName>
        <active>true</active>
        <label>非本公司客户资产</label>
    </recordTypes>
    <recordTypes>
        <fullName>cassini</fullName>
        <active>true</active>
        <label>飞白检查设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>myopia</fullName>
        <active>true</active>
        <description>用于记录准分子设备信息</description>
        <label>准分子设备</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Whethergeneratetheinspectioncondition</fullName>
        <active>true</active>
        <description>选择生成巡检复选框时，需要设备保修起始日期，设备保修终止日期都不为空</description>
        <errorConditionFormula>WhetherCreatePolling__c  &amp;&amp;  (  ISNULL( warrantySatart__c )  ||  ISNULL( warrantyEnd__c )    )</errorConditionFormula>
        <errorMessage>选择生成巡检复选框时，需要设备保修起始日期，设备保修终止日期都不为空，而且只有全保设备才可以生成巡检。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>datatime</fullName>
        <active>true</active>
        <description>设备保修起始日期需要小于设备保修终止日期</description>
        <errorConditionFormula>warrantySatart__c  &gt;  warrantyEnd__c</errorConditionFormula>
        <errorMessage>设备保修起始日期大于设备保修终止日期</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ismain</fullName>
        <active>false</active>
        <description>是否主设备字段与主设备查找字段 有一个必填</description>
        <errorConditionFormula>ismain__c  &amp;&amp;  NOT(ISBLANK(mainEquipment__c))  ||  (  NOT(ismain__c)   &amp;&amp;  ISBLANK(mainEquipment__c) )</errorConditionFormula>
        <errorMessage>请确认是否为主设备或者选择主设备</errorMessage>
    </validationRules>
</CustomObject>